--- a/package.json
+++ b/package.json
@@ -1,62 +1,32 @@
 {
-  "name": "bemobiletest",
-  "main": "expo-router/entry",
+  "name": "bemobile-test-frontend",
   "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "api": "json-server --watch db.json --port 3000 --host 192.168.0.142"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@types/react-native-vector-icons": "^6.4.18",
-    "@types/styled-components": "^5.1.34",
-    "@types/styled-components-react-native": "^5.2.5",
-    "axios": "^1.7.9",
-    "date-fns": "^4.1.0",
-    "expo": "~52.0.37",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.7",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
-    "expo-web-browser": "~14.0.2",
-    "json-server": "^1.0.0-beta.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "styled-components": "^6.1.15"
+    "@expo/vector-icons": "^13.0.0",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "expo": "~50.0.7",
+    "expo-blur": "~12.9.1",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
-    "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "json-server": "^1.0.0-alpha.23",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
